# night_sky

./: EARTH_VIEW_IMPLEMENTATION.md  FILES_SUMMARY.txt  README.md  __init__.py  __main__.py  app.py  data_manager.py  export.py  main_window.py  opengl_utils.py  prefs.py  pyproject.toml  release_note.md  requirements.txt  run_tests.py  settings.py  sky_model.py  sky_view_2d.py  sky_view_3d.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: RELEASE_NOTES.md  TODO.md  help.md
night_sky/: __main__.py  app.py  data_manager.py  location_selector.py  main_window.py  prefs.py  search_dialog.py  settings.py  sky_model.py  sky_view_2d.py  sky_view_3d.py
night_sky.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
night_sky/data/: stars_bright.csv
tests/: conftest.py  test_data_and_model.py  test_export.py  test_prefs.py  test_visual.py
