[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "night-sky"
version = "0.3.0"
description = "Offline, cross-platform, Python-based planetarium and sky chart generator."
readme = "README.md"
authors = [ { name = "Chandrasekar Subramani Narayana" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "astropy",
    "pyqtgraph",
    "PyQt5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "mypy"]

[project.scripts]
night-sky = "night_sky.app:run"
