[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "night-sky"
version = "0.4.0"
description = "Offline, cross-platform, Python-based planetarium and sky chart generator."
readme = "README.md"
authors = [ { name = "Chandrasekar Subramani Narayana" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "astropy",
    "pyqtgraph",
    "PyQt5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "mypy", "pillow"]

[project.scripts]
night-sky = "night_sky.app:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["night_sky*"]

[tool.setuptools.package-data]
night_sky = ["data/*.csv"]
